--- a/src/index.html
+++ b/src/index.html
@@ -50,17 +50,6 @@
   <link rel="stylesheet" href="./contact.css" />
 </head>
 
-<!-- This is only for debugging -->
-<style>
-  * {
-    outline: 2px solid green;
-  }
-
-  * {
-    outline: none;
-  }
-</style>
-
 <body class="relative bg-background font-primary text-text" style="margin: 0px">
   <img class="absolute z-0 h-screen w-full object-cover object-center" src="images/bg_home.jpg" alt=""
     aria-hidden="true" />
@@ -93,7 +82,7 @@
         </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
-        <ul class="mt-4 flex flex-col md:mt-0 md:flex-row md:space-x-8 md:text-sm md:font-bold">
+        <ul class="mt-4 flex flex-col md:mt-0 md:flex-row md:space-x-8 md:text-sm md:font-bold bg-background rounded-lg overflow-hidden">
           <li>
             <a href="#home" class="block rounded bg-accent py-2 pr-4 pl-3 text-text md:bg-transparent md:p-0">Home</a>
           </li>
@@ -241,10 +230,10 @@
   </section>
 
   <footer class="w-full mt-6 p-6 md:px-12 rounded-lg shadow md:flex md:items-center md:justify-between">
-    <span class="text-base text-accent sm:text-center">© 2022 <a href="https://regalia_website"
+    <span class="text-mini md:text-base text-accent sm:text-center">© 2022 <a href="https://regalia_website"
         class="hover:underline">Regalia™</a>. All Rights Reserved.
     </span>
-    <ul class="flex flex-wrap items-center pt-3 text-base text-text sm:mt-0">
+    <ul class="flex flex-wrap items-center pt-3 text-mini md:text-base text-text sm:mt-0">
       <li>
         <a href="about/" class="mr-4 hover:underline md:mr-6 ">About</a>
       </li>
