--- a/src/events/index.html
+++ b/src/events/index.html
@@ -11,11 +11,11 @@
     <script defer src="./modals.js"></script>
 </head>
 <body>
-<img src="images\bgd.jpg" id="bg" alt="">
+<img src="images\bgd.webp" id="bg" alt="">
 <div class="headtext">Events.</div>
 <div class="card-collection">
         <div class="card">
-            <img id="card-image" src="images\pexels-thibault-trillet-167636.jpg" alt="battle of bands" style="width:100%">
+            <img id="card-image" src="images\pexels-thibault-trillet-167636.webp" alt="battle of bands" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Band Bash.</span>
                 <div class="divider"></div>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="card">
-            <img id="card-image" src="images\michael-lee-5Z9bgfRZLLE-unsplash.jpg" alt="fashion show" style="width:100%">
+            <img id="card-image" src="images\michael-lee-5Z9bgfRZLLE-unsplash.jpg" alt="fashion show" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Kasish-e-haya.</span>
                 <div class="divider"></div>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\rainier-ridao-GRDpPpKczdY-unsplash.jpg" alt="group dance competition" style="width:100%">
+            <img id="card-image" src="images\rainier-ridao-GRDpPpKczdY-unsplash.webp" alt="group dance competition" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Footloose.</span>
                 <div class="divider"></div>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\allie-reefer-rAoQn6kwv64-unsplash.jpg" alt="3 minutes to fame" style="width:100%; height:70%">
+            <img id="card-image" src="images\allie-reefer-rAoQn6kwv64-unsplash.webp" alt="3 minutes to fame" loading="lazy" style="width:100%; height:70%">
             <div class="container">
                 <span class="name">Carpe Diem.</span>
                     <div class="divider"></div>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\lilly-rum-L6W9ZIQ5saM-unsplash.jpg" alt="Photography" style="width:100%; height:70%">
+            <img id="card-image" src="images\lilly-rum-L6W9ZIQ5saM-unsplash.webp" alt="Photography" loading="lazy" style="width:100%; height:70%">
             <div class="container">
                 <span class="name">Looking Glass.</span>
                     <div class="divider"></div>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\eaters-collective-i_xVfNtQjwI-unsplash.jpg" alt="Reel making" style="width:100%; height:70%">
+            <img id="card-image" src="images\eaters-collective-i_xVfNtQjwI-unsplash.webp" alt="Reel making" loading="lazy" style="width:100%; height:70%">
             <div class="container">
                 <span class="name">Social Seize.</span>
                     <div class="divider"></div>
