--- a/src/index.html
+++ b/src/index.html
@@ -161,31 +161,31 @@
     >
       <div class="z-10 px-6 md:px-12">
         <div class="mt-6">
-          <p class="font-medium text-min-base md:text-max-base">Presenting the annual cultural fest</p>
-          <h1 class="text-min-xl font-black md:text-max-xl">
-            Regalia '22
-          </h1>
+          <p class="text-min-base font-medium md:text-max-base">
+            Presenting the annual cultural fest
+          </p>
+          <h1 class="text-min-xl font-black md:text-max-xl">Regalia '22</h1>
         </div>
 
-        <div
-          class="mt-6 text-min-lg font-bold md:text-max-lg"
-        >
+        <div class="mt-6 text-min-lg font-bold md:text-max-lg">
           <h3>Relive.</h3>
           <h3>Rejoice.</h3>
           <h3>Rejuvenate.</h3>
         </div>
 
         <!-- links as button -->
-        <div class="mt-8 md:mt-12 flex items-center space-x-6 text-center font-medium text-background text-min-sm md:text-max-sm">
+        <div
+          class="mt-8 flex items-center space-x-6 text-center text-min-sm font-medium text-background md:mt-12 md:text-max-sm"
+        >
           <a
             href="events/"
-            class="rounded-lg bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 px-5 py-2.5 md:px-6 md:py-3 hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100"
+            class="rounded-lg bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 px-5 py-2.5 hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100 md:px-6 md:py-3"
             >See events</a
           >
           <a
             data-wip
             href="about/"
-            class="border-red rounded-lg border px-5 py-2.5 md:px-6 md:py-3 hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100"
+            class="border-red rounded-lg border px-5 py-2.5 hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100 md:px-6 md:py-3"
           >
             About Regalia
           </a>
@@ -200,10 +200,10 @@
               aria-hidden="true"
             />
           </div>
-          <p class="mt-1 font-light text-min-base md:text-right md:text-max-lg">
+          <p class="mt-1 text-min-base font-light md:text-right md:text-max-lg">
             19 to 20 May
           </p>
-          <div class="flex items-center text-min-base space-x-2 md:text-max-lg">
+          <div class="flex items-center space-x-2 text-min-base md:text-max-lg">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5 sm:h-8 sm:w-8"
@@ -216,7 +216,9 @@
                 clip-rule="evenodd"
               />
             </svg>
-            <p class="font-bold text-min-base md:text-max-lg md:text-right">Nazrul Mancha</p>
+            <p class="text-min-base font-bold md:text-right md:text-max-lg">
+              Nazrul Mancha
+            </p>
           </div>
         </div>
       </div>
@@ -233,12 +235,14 @@
       id="artist"
       class="mb-12 min-h-screen w-full scroll-mt-20 px-6 md:px-12"
     >
-      <h1 class="mb-6 text-min-xl md:text-max-xl font-black">Artists</h1>
+      <h1 class="mb-6 text-min-xl font-black md:text-max-xl">Artists</h1>
 
       <div class="flex w-full flex-wrap items-center justify-center gap-12">
         <!-- 19 may -->
         <div class="flex flex-col items-center">
-          <span class="mb-6 text-min-lg md:text-max-lg font-bold text-text">19 May</span>
+          <span class="mb-6 text-min-lg font-bold text-text md:text-max-lg"
+            >19 May</span
+          >
           <div
             class="flex flex-wrap items-center justify-center gap-6 md:justify-between"
           >
@@ -247,12 +251,12 @@
             >
               <img
                 class="mb-8 block rounded-lg object-cover object-center p-0"
-                src="https://ik.imagekit.io/rain/regalia22/artists/ehsaas_s4xp-HQ_p?ik-sdk-version=javascript-1.4.3"
+                src="./images/eshaas.jpg"
                 alt="Ehsaas India image"
               />
               <div class="px-5 pb-5">
                 <h5
-                  class="text-center text-min-base md:text-max-base font-medium tracking-tight text-text"
+                  class="text-center text-min-base font-medium tracking-tight text-text md:text-max-base"
                 >
                   Ehsaas India
                 </h5>
@@ -263,12 +267,12 @@
             >
               <img
                 class="mb-8 block rounded-lg object-cover object-center p-0"
-                src="https://ik.imagekit.io/rain/regalia22/artists/somlata_G9cqHnZpb?ik-sdk-version=javascript-1.4.3"
+                src="./images/somlata.jpg"
                 alt="Somlata and the Aces image"
               />
               <div class="px-5 pb-5">
                 <h5
-                  class="text-center text-min-base md:text-max-base font-medium tracking-tight text-text"
+                  class="text-center text-min-base font-medium tracking-tight text-text md:text-max-base"
                 >
                   Somlata and the Aces
                 </h5>
@@ -278,14 +282,16 @@
         </div>
         <!-- 20 may -->
         <div class="flex flex-col items-center">
-          <span class="mb-6 text-min-lg md:text-max-lg font-bold text-text">20 May</span>
+          <span class="mb-6 text-min-lg font-bold text-text md:text-max-lg"
+            >20 May</span
+          >
           <div
             class="flex flex-wrap items-end justify-center gap-6 md:justify-between"
           >
             <div
               class="max-w-xs flex-shrink-0 rounded-lg border-2 border-dark shadow-lg"
             >
-              <div class="mb-7 bg-[#694796] rounded-lg bg-transparent py-7">
+              <div class="mb-7 rounded-lg bg-[#694796] bg-transparent py-7">
                 <img
                   class="block object-cover object-center p-0"
                   src="https://ik.imagekit.io/rain/regalia22/artists/TTP_fNdvCVdy8.png?ik-sdk-version=javascript-1.4.3"
@@ -294,11 +300,11 @@
               </div>
               <div class="px-5 pb-5">
                 <h5
-                  class="mb-1 text-center text-min-base md:text-max-base font-medium tracking-tight text-text"
+                  class="mb-1 text-center text-min-base font-medium tracking-tight text-text md:text-max-base"
                 >
                   Tribute to Pancham
                 </h5>
-                <p class="text-center text-min-sm md:text-max-sm text-[#444]">
+                <p class="text-center text-min-sm text-[#444] md:text-max-sm">
                   Kishore Sodha, Sachin Jambhekar, <br />
                   Sujoy Bhowmik, Sispiya and team
                 </p>
@@ -314,7 +320,7 @@
               />
               <div class="px-5 pb-5">
                 <h5
-                  class="text-center text-min-base md:text-max-base font-medium tracking-tight text-text"
+                  class="text-center text-min-base font-medium tracking-tight text-text md:text-max-base"
                 >
                   Underground Authority
                 </h5>
@@ -331,8 +337,10 @@
       id="gallery"
       class="mb-12 w-full scroll-mt-20 space-y-6 px-6 md:px-12"
     >
-      <h1 class="font-black text-min-xl md:text-max-xl">Gallery</h1>
-      <p class="mt-2 mv-6 text-accent text-min-base md:text-max-base">See some of the best photos of Regalia</p>
+      <h1 class="text-min-xl font-black md:text-max-xl">Gallery</h1>
+      <p class="mv-6 mt-2 text-min-base text-accent md:text-max-base">
+        See some of the best photos of Regalia
+      </p>
       <!-- carousel container -->
       <div class="splide">
         <div
@@ -472,7 +480,7 @@
       id="contact"
       class="contact w-full scroll-mt-20 px-6 md:px-12"
     >
-      <h1 class="mb-6 font-black text-min-xl md:text-max-xl">Contact</h1>
+      <h1 class="mb-6 text-min-xl font-black md:text-max-xl">Contact</h1>
       <div class="contact-middle-section">
         <div class="google-maps">
           <iframe
@@ -487,18 +495,26 @@
         </div>
         <div class="contact-email-section">
           <div class="email-us">
-            <h3 class="font-bold text-min-lg md:text-min-lg">Email</h3>
-            <a class="text-min-base md:text-max-base font-medium" href="mailto:regalia2k22@gmail.com">regalia2k22@gmail.com</a>
+            <h3 class="text-min-lg font-bold md:text-min-lg">Email</h3>
+            <a
+              class="text-min-base font-medium md:text-max-base"
+              href="mailto:regalia2k22@gmail.com"
+              >regalia2k22@gmail.com</a
+            >
           </div>
           <div class="contact-us">
-            <h3 class="text-min-lg md:text-max-lg font-bold">Coordinators</h3>
+            <h3 class="text-min-lg font-bold md:text-max-lg">Coordinators</h3>
             <div class="contacts font-primary">
               <div class="contacts-item">
-                <h5 class="text-min-base md:text-max-base">Bhaswati Chakraborty</h5>
+                <h5 class="text-min-base md:text-max-base">
+                  Bhaswati Chakraborty
+                </h5>
                 <a href="tel:+916291293545">+91 62912 93545</a>
               </div>
               <div class="contacts-item">
-                <h5 class="text-min-base md:text-max-base">Nivedita Chakraborty</h5>
+                <h5 class="text-min-base md:text-max-base">
+                  Nivedita Chakraborty
+                </h5>
                 <a href="tel:+918583057308">+91 85830 57308</a>
               </div>
               <!-- <div class="contacts-item">
@@ -547,11 +563,14 @@
       </span>
 
       <main class="mt-3 md:mt-0">
-        <p class="text-min-sm md:text-max-sm text-[#444] font-medium">Made with <span class="text-red-600">&hearts;</span> by Regalia tech team</p>
+        <p class="text-min-sm font-medium text-[#444] md:text-max-sm">
+          Made with <span class="text-red-600">&hearts;</span> by Regalia tech
+          team
+        </p>
       </main>
 
       <ul
-        class="flex flex-wrap items-center mt-3 text-min-sm text-text md:mt-0 md:text-max-sm"
+        class="mt-3 flex flex-wrap items-center text-min-sm text-text md:mt-0 md:text-max-sm"
       >
         <li>
           <a href="about/" class="mr-4 hover:underline md:mr-6">About</a>
