--- a/src/events/index.html
+++ b/src/events/index.html
@@ -4,181 +4,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events of Regalia</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="./events.css" rel="stylesheet" />
   </head>
-  <body>
-    <a
-      href="/"
-      style="
-        position: absolute;
-        top: 1rem;
-        right: 2rem;
-        padding: 0.6rem 1rem;
-        background-color: #0b74bf;
-        color: #f2f2f2;
-        border-radius: 999px;
-        text-decoration: none;
-        z-index: 999999;
-        font-size: 0.75rem;
-        font-weight: bold;
-        font-family: Montserrat;
-      "
-      >Go to home</a
-    >
-    <img id="bg" alt="" aria-hidden="true" />
-    <div class="headtext">Events.</div>
+  <body class="bg-background" cz-shortcut-listen="true">
+    <div class="headtext outline-txt">Events.</div>
     <div class="card-collection">
-      <div class="card">
+      <div class="card" data-modal-target="#modal1">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/1_0icV6lnFw.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/9-min_BaEVkT5W2.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523902098"
           alt="battle of bands"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Band Bash.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "Music is the literature of the heart, it commences where speech
-            ends" - Alphonse de Lamartine
-          </p>
-          <button data-modal-target="#modal1">Learn more</button>
-        </div>
       </div>
 
-      <div class="card">
+      <div class="card"  data-modal-target="#modal2">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/2_-dyNAJNkU.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/10-min_-LT7lQig_I.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523903169"
           alt="fashion show"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Kasish-e-haya.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "What you wear is how you present yourself to the world, especially
-            today, when human contacts are so quick. Fashion is instant
-            language." - Miuccia Prada
-          </p>
-          <button data-modal-target="#modal2">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card"  data-modal-target="#modal3">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/3_D0JJG3S99.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/8-min_AsrU3xWyti.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523902523"
           alt="group dance competition"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Footloose.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "Dance Beneath the Stars as you drink in the Night. Let the thunder
-            overtake you as lightening fills the Sky. Feel the force of the
-            nature penetrate your skin, Spin with the world as Magic sinks in!"
-            -Christy Ann Martine
-          </p>
-          <button data-modal-target="#modal3">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card"  data-modal-target="#modal4">
         <img
           class="special-image"
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/4_T3fcRsL2U.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/7-min_58_lcbc2N.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523905180"
           alt="3 minutes to fame"
           loading="lazy"
-          style="width: 100%; height: 70%"
+          style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Carpe Diem.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "A positive attitude opens the door to positive opportunities, which
-            leads to a positive life." - Joel Benjamin
-          </p>
-          <button data-modal-target="#modal4">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card"  data-modal-target="#modal5">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/5_2nFf66tfP.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/6-min_fhZm9gSba.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523905228"
           alt="Photography"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Looking Glass.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "Photography has nothing to do with the camera" - Lucas Gentry
-          </p>
-          <button data-modal-target="#modal5">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card"  data-modal-target="#modal6">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/6_l0oP0yx1V.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/5-min_jcxy1SHsL.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523903967"
           alt="Reel making"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Social Seize.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            They say, if a picture is worth a thousand words, then a video is
-            worth a million.
-          </p>
-          <button data-modal-target="#modal6">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card"  data-modal-target="#modal7">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/7_1Yup0elmAI.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/11-min_YZDPxkQ47.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523902772"
           alt="Reddit Rumble"
           loading="lazy"
           style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Reddit Rumble.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            Here's to belonging to a generation that copes with the miseries of
-            life, through memes.
-          </p>
-          <button data-modal-target="#modal7">Learn more</button>
-        </div>
       </div>
-      <div class="card">
+      <div class="card"  data-modal-target="#modal8">
         <img
           id="card-image"
-          src="https://ik.imagekit.io/rain/regalia22/events/8__A94gnjad.webp?ik-sdk-version=javascript-1.4.3"
+          src="https://ik.imagekit.io/4fcgb3jqfx/imagecompressor/4-min_9e3loWCWy.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1652523903725"
           alt="Ad Spoof"
           loading="lazy"
-          style="width: 100%; height: 67%"
+          style="width: 100%"
         />
-        <div class="container">
-          <span class="name">Funny Bones.</span>
-          <div class="divider"></div>
-          <p class="bio">
-            "Advertising is the art of persuasion" - William Bernbach
-          </p>
-          <button data-modal-target="#modal8">Learn more</button>
-        </div>
       </div>
     </div>
 
@@ -401,7 +304,7 @@
     <div class="modal" id="modal4">
       <div class="modal-header">
         <div class="title">Rules & Regulations: <b>CARPE-DIEM</b></div>
-        <button data-close-button class="close-button">&times;</button>
+        <button  data-close-button class="close-button">&times;</button>
       </div>
       <div class="modal-body">
         Team REGALIA 2022 happily presents CARPE DIEM - 3 Minutes to Fame, this
@@ -476,7 +379,7 @@
     <div class="modal" id="modal5">
       <div class="modal-header">
         <div class="title">Rules & Regulations: <b>LOOKING GLASS</b></div>
-        <button data-close-button class="close-button">&times;</button>
+        <button  data-close-button class="close-button">&times;</button>
       </div>
       <div class="modal-body">
         Team REGALIA 2022, believe it is the photographer who creates a story
@@ -690,5 +593,7 @@
     <div id="overlay"></div>
 
     <script type="module" src="./modals.js"></script>
+    <script type="module" src="/main.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </body>
 </html>
